@@ -2,6 +2,9 @@ $Id$
 
 *** Note: Please add new entries to the top of this file. ***
 -------------------------------------------------------------------------------
+- DNS forwarder: add option to log DNS queries, add aliases (CNAMEs) and MXs
+  (contributed by Pierre Nast)
+
 - upgrade dnsmasq to 2.66, remove TFTP , auth and DHCPv4 options from dnsmasq
 
 - update some README text
